# ai_mem

./: .env.example  .gitignore  BACKLOG.md  README.md  TODO.md  alembic.ini  docker-compose.yml  mcp_config.json  pyproject.toml
alembic/: env.py
alembic/versions/: 81da212131c6_init_ai_mem.py  a24f20346b81_create_temp_memory.py
docs/: ARCHITECTURE_DIAGRAM.md  CHECKLIST.md  COMPLETION_SUMMARY.md  DEPENDENCY_INJECTION.md  DI_BEST_PRACTICES.md  DI_QUICK_REFERENCE.md  EMPTY_FACTS_LOGGER.md  IMPLEMENTATION_SUMMARY.md  LLM_PARSER_UPDATE.md  LLM_RESPONSE_PARSER.md  LOGGING_GUIDE.md  LOGGING_SUMMARY.md  PROJECT_PLANNING.md  QUICK_START.md  README.md  RUNNING_WITHOUT_SENTRY.md  SENTRY_AUTO_DETECTION.md  SENTRY_DISABLE.md  SENTRY_QUICKSTART.md  SENTRY_SETUP.md  TESTING_MEMORY_STORAGE.md
src/: __init__.py  db.py  main.py  weather.py
src/ai_mem/: __init__.py
src/ai_mem/server/api/: __init__.py  router.py
src/ai_mem/server/application/: __init__.py
src/ai_mem/server/domain/: __init__.py
src/ai_mem/server/dto/: __init__.py  memory.py
src/ai_mem/server/infrastructure/: __init__.py  config.py  container.py  empty_facts_logger.py  logging_config.py  sentry_config.py
src/ai_mem/server/interface_adapter/: __init__.py
src/ai_mem/server/llm_client/: __init__.py  base.py  ollama_client.py
src/ai_mem/server/model/: __init__.py  memory.py  user.py
src/ai_mem/server/service/: __init__.py  extractor.py  memory.py
src/mcp_mem/mcp/: __init__.py
src/mcp_mem/server/: __init__.py
tests/: test_dependency_injection_example.py  test_llm_response_parser.py
(+25 files in other folders)
